moved logo image, fixed text spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,7 +146,10 @@ input, select, textarea {
 
 		}
 
-    /* new shit */
+		/* new shit */
+		.flex-container {
+			display: flex;
+		}
     .pillars{
         color: white;
     }
